# qml-osg

./: AtmosphereDemo.cpp  AtmosphereDemo.h  CMakeLists.txt  CloudSeaAtmosphere.cpp  CloudSeaAtmosphere.h  OSGRenderer.cpp  OSGRenderer.h  README.md  SkyCloud.cpp  SkyCloud.h  SkyNode.cpp  SkyNode.h  VolumeCloudSky.cpp  VolumeCloudSky.h  demoshader.cpp  demoshader.h  main.cpp  main.qml  mousehandler.cpp  mousehandler.h  osgviewport.cpp  osgviewport.h  qml+osg 集成.txt  qml.qrc  shadercube.cpp  shadercube.h  shaderpbr.cpp  shaderpbr.h  simpleosgrenderer.cpp  simpleosgrenderer.h  simpleosgviewer.cpp  simpleosgviewer.h  skybox.cpp  skybox.h  skyboxmanipulator.cpp  skyboxmanipulator.h  uihandler.cpp  uihandler.h  viewmanager.cpp  viewmanager.h
qml/: ColorPicker.qml  DraggableWindow.qml  PBRMaterialControl.qml  main.qml
shader/: CloudSea.frag  CloudSea.vert  CloudSky.frag  CloudSky.vert  SkyAtmosphere.frag  SkyAtmosphere.vert  SkyAtmosphereCloud.frag  VolumeCloud.frag  VolumeCloud.vert  VolumeSkyCloud.frag  VolumeSkyCloud.vert  X1.frag  X1.vert  atmosphere_fragment.txt  atmosphere_vertex.txt  demo.frag  demo.vert  fragment_shader.txt  sky_fragment.txt  skybox_vertex.txt  vertex_shader.txt
